// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ToggleRow Snapshot matches snapshot for checked state with subLabel 1`] = `
<div
  style="display: flex; align-items: center; justify-content: space-between; min-height: 44px; opacity: 1; cursor: default;"
>
  <div
    style="display: flex; flex-direction: column; gap: 2px;"
  >
    <span
      style="font-size: 14px; font-weight: 500; line-height: 1.3;"
    >
      Enable feature
    </span>
    <span
      style="font-size: 12px; font-weight: 400; line-height: 1.3;"
    >
      This enables the feature
    </span>
  </div>
  <div
    aria-checked="true"
    aria-disabled="false"
    role="switch"
    style="width: 40px; height: 22px; border-radius: 99px; position: relative; cursor: pointer; transition: background 150ms; flex-shrink: 0; box-shadow: 0 0 0 3px rgba(59,130,246,0.15);"
    tabindex="0"
  >
    <div
      style="position: absolute; width: 16px; height: 16px; border-radius: 50%; background: white; top: 2px; left: 20px; transition: left 150ms; box-shadow: 0 1px 3px rgba(0,0,0,0.25);"
    />
  </div>
</div>
`;

exports[`ToggleRow Snapshot matches snapshot for unchecked default state 1`] = `
<div
  style="display: flex; align-items: center; justify-content: space-between; min-height: 44px; opacity: 1; cursor: default;"
>
  <div
    style="display: flex; flex-direction: column; gap: 2px;"
  >
    <span
      style="font-size: 14px; font-weight: 500; line-height: 1.3;"
    >
      Enable feature
    </span>
  </div>
  <div
    aria-checked="false"
    aria-disabled="false"
    role="switch"
    style="width: 40px; height: 22px; border-radius: 99px; position: relative; cursor: pointer; transition: background 150ms; flex-shrink: 0; box-shadow: none;"
    tabindex="0"
  >
    <div
      style="position: absolute; width: 16px; height: 16px; border-radius: 50%; background: white; top: 2px; left: 2px; transition: left 150ms; box-shadow: 0 1px 3px rgba(0,0,0,0.25);"
    />
  </div>
</div>
`;
